server: add security to debts
